--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.1",
+    "@vueuse/core": "^8.6.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
